# despesas

./: Cargo.toml
backend/: Cargo.toml  manage.py  pyproject.toml
backend/despesas/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
